deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx
  namespace: myweb
  labels:
    app: myweb
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
