database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydb
  namespace: mywebsite
spec:
  replicas: 1
  selector:
         matchLabels:
                 app: mywebsite
  template:
         metadata:
                name: mypod
                labels:
                    app: mywebsite
         spec:
                containers:
                      - name: mycontainer
                        image: mysql
---
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: mywebsite
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
      app: mywebsite
